--- a/app/views/admin_users/index.html.erb
+++ b/app/views/admin_users/index.html.erb
@@ -21,7 +21,7 @@
     <th>Login</th>
     <th>Manager</th>
     <th>Total Business Days of Holidays</th>
-    <th colspan="3">Settings</th>
+    <th colspan="4">Settings</th>
   </tr>
   </thead>
 
@@ -33,6 +33,7 @@
         <td><%= user.get_all_days_holidays_business %></td>
         <td><%= link_to 'Show', admin_user_path(user) %></td>
         <td><%= link_to 'Edit', edit_admin_user_path(user) %></td>
+        <td><%= link_to 'Reset Password', reset_password_path(user), data: { confirm: 'Are you sure?' } %></td>
         <td><%= link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
   <% end %>
