--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,16 +4,8 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
-        <li><%= link_to "Calendar", root_path %></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Account <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "My Holidays", holidays_path %></li>
-                <li><%= link_to "Change my Password", edit_user_path(current_user) %></li>
-              </ul>
-            </li>
+            <li><%= link_to "Calendar", root_path %></li>
+            <li><%= link_to "My Holidays", holidays_path %></li>
             <% if current_user.manager? %>
                 <% num_pending_holiday = count_holidays_pending %>
                 <li class="dropdown">
@@ -27,9 +19,16 @@
                   </ul>
                 </li>
             <% end %>
-            <li>
-              <%= link_to "Log out", logout_path %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Settings <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Email Configuration", edit_emails_configuration_path %></li>
+                <li><%= link_to "Change my Password", edit_user_path(current_user) %></li>
+              </ul>
             </li>
+            <li><%= link_to "Log out", logout_path %></li>
         <% end %>
       </ul>
     </nav>
